# github-issue-classifier

./: .env.example  .pre-commit-config.yaml  main.py  pyproject.toml
docker/: Dockerfile.dashboard  docker-compose.yml
src/: config.py
src/dashboard/: app.py
src/data/: collector.py
src/db/: mongo_client.py
src/utils/: github_auth.py
